[package]
name = "fizzbuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde"]} 
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
tokio = { version = "1.26", features = ["fs", "sync"] }
home = "0.5.4"

[[bin]]
name = "server"

[[bin]]
name = "worker"
