[package]
name = "fizzbuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26", features = ["fs", "sync", "full"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
sqlx = { version = "0.6.0", default-features = false, features = ["macros", "offline", "migrate", "time"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
reqwest = { version = "0.11", features = ["json"] }


[[bin]]
name = "server"

[[bin]]
name = "worker"
